--- a/css/spinTheBotte.css
+++ b/css/spinTheBotte.css
@@ -1,5 +1,6 @@
 #spinTheBottleWrapper {
     text-align: center;
+    overflow: -moz-hidden-unscrollable;
 }
 
 #circle {
